Setup reproduction for jest issues

--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "7.4.3",
+    "@redwoodjs/auth-dbauth-api": "7.4.3",
     "@redwoodjs/graphql-server": "7.4.3"
   }
 }
